# google-adk-hackathon

./: .env.example  .gitignore  README.md  agent.py  knowledge_base.py  knowledge_base_1.py  local_setup.md  main.py  pyproject.toml  rag_kb.py  requirements.txt  slack_listener.py
agent_faq_extractor/: .env.example  faq_agent.py  qna_utils.py
agents/: README.md  performance_test_llama.py  pyproject.toml
agents/document_agent/: agent.py
agents/document_agent/utils/: llm.py  slack_app.py
agents/llama_agent/: rag_kb_llm.py
agents/messaging_agent/: agent.py
agents/messaging_agent/utils/: llm.py  slack_app.py
agents/multi_tool_agent/: rag_kb.py
agents/multi_tool_agent_gemini/: agent.py  rag_kb_gemini.py
agents/multi_tool_agent_llama/: agent.py
agents/multi_tool_agent_llama/multi_tool_agent/: __init__.py
agents/openai_agent/: __init__.py  agent.py  rag_kb_openai.py
agents/qna_agent/: agent.py  rag_kb_gemini.py
agents/slack_agent/: agent.py
agents/slack_agent/utils/: config.py  llm.py  slack_app.py
agents/ticketing_agent/: agent.py
agents/ticketing_agent/modules/: README.md  answers.py  document_manager.py  qna_utils.py
archives/multi_tool_agent_llama/multi_tool_agent/: agent.py
bisner-deploy/: app_rag.py  debug_app.py  requirements.txt
bisner-deploy/knowledge-base/booking/: Booking (module) -1.md
bisner-deploy/knowledge-base/company/: Company (module) -1.md
bisner-deploy/knowledge-base/location/: Location (module) -1.md
bisner-deploy/knowledge-base/parking/: Parking (module) -1.md
bisner-deploy/knowledge-base/platform/: Platform -1.md
knowledge-base-slack/events/: event-management.md
knowledge-base-slack/service-requests/: service-request-management.md
knowledge_base/team_a/: group_1.md
modules/: answers.py  qna_utils.py
multi_tool_agent/: agent.py
multi_tool_agent_gemini/: agent.py  rag_kb_gemini.py
multi_tool_agent_llama/: rag_kb_llm.py
multi_tool_agent_llama/multi_tool_agent/: rag_kb_llm.py
slack_agent/: agent.py
slack_agent/utils/: config.py  llm.py  slack_app.py
slack_mention_bot/: app.py  requirements.txt
ticketing_agent/: agent.py
ticketing_agent/modules/: answers.py  public_query_handler.py
utils/: config.py  llm.py  slack_app.py
vector_db/: chroma.sqlite3
vector_db_llama/: chroma.sqlite3
vector_db_openai/: chroma.sqlite3
