[project]
name = "google-adk-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "sedhha,ishank-dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk (>=1.2.1,<2.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "aiohttp (>=3.12.12,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
