[project]
name = "google-adk-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "sedhha,ishank-dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "google-adk (>=1.2.1,<2.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "aiohttp (>=3.12.12,<4.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "gradio (>=5.33.2,<6.0.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.22,<0.4.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
