[project]
name = "google-adk-hackathon"
version = "0.1.0"
description = "Multi-Agent RAG System with Llama and OpenAI following ADK structure"
authors = [
    {name = "sedhha,ishank-dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk (>=1.2.1,<2.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "aiohttp (>=3.12.12,<4.0.0)",
    "gradio (>=4.0.0)",
    "langchain (>=0.1.0)",
    "langchain-community (>=0.0.20)",
    "langchain-openai (>=0.0.5)",
    "langchain-chroma (>=0.1.0)",
    "sentence-transformers (>=2.2.0)",
    "python-dotenv (>=1.0.0)",
    "chromadb (>=0.4.0)",
    "openai (>=1.0.0)",
    "plotly (>=5.0.0)",
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    "scikit-learn (>=1.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
